# inrtu-web-django

./: .gitignore  .nginx.conf.swp  Jenkinsfile  README.md  docker-compose.yaml  docker-compose.yml  environment.yml  local_settings.py.example  nginx.conf  package-lock.json  requirements.txt
app/: settings.py  urls.py
backend/: Dockerfile  pyproject.toml
backend/app/: settings.py  urls.py
backend/characters/: admin.py  api.py  models.py  serializers.py  tests.py  views.py
backend/characters/migrations/: 0003_alter_team_name.py  0004_alter_team_options.py  0005_remove_character_team_name.py  0006_position_character_position.py  0007_skills.py  0008_character_skill.py  0012_skills_description.py  0013_character_picture.py  0014_content_picture.py  0015_content_user.py  0017_contenttype_user_position_user_skills_user_team_user.py  0019_alter_user_name.py  0020_user_surname_alter_user_name.py
characters/: api.py  models.py  serializers.py  tests.py
characters/management/commands/: generate_data.py
characters/migrations/: 0001_initial.py  0002_team_alter_character_options_alter_character_name_and_more.py  0009_contenttype_alter_position_name_content.py  0010_alter_content_options.py  0011_alter_contenttype_options.py  0016_character_user.py  0018_user.py
client/: package-lock.json  package.json  vite.config.js
client/src/: App.vue  main.js
frontend/: Dockerfile  nginx.conf  nginx_reverse.conf  nginx_static.conf  package-lock.json  vite.config.js
frontend/src/: App.vue
k8s/: ingress.yaml
k8s/deployment/: backend.yaml  frontend.yaml
k8s/monitoring/: cadvisor-daemonset.yaml  cadvisor-service.yaml  grafana-conf.yaml  grafana-deployment.yaml  grafana-service.yaml  node-daemonset.yaml  node-service.yaml  prometheus-conf.yaml  prometheus-deployment.yaml  prometheus-service.yaml
k8s/service/: backend.yaml  frontend.yaml
templates/characters/: show_characters.html
(+12 files in other folders)
