[project]
name = "inrtu-web-django-server"
version = "0.1.0"
description = "INRTU Django server"
authors = [
    {name = "wqqzxts@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "django==5.1.1",
    "djangorestframework==3.15.2",
    "pytest-django==4.9.0",
    "model-bakery==1.20.0",
    "Pillow==12.0.0",
    "uvicorn==0.38.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
Faker = "13.1.0"
model-bakery = "1.20.0"
