[tool.poetry]
name = "inrtu-web-django-server"
version = "0.1.0"
description = "INRTU Django server"
authors = ["wqqzxts@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12"
django = "5.1.1"
djangorestframework = "3.15.2"
pytest-django = "4.9.0"
model-bakery = "1.20.0"
pillow = "12.0.0"
uvicorn = "0.38.0"

[tool.poetry.group.dev.dependencies]
faker = "13.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
